# AI_Long-term_Memory_Contamination_Detector

./: README.md  pyproject.toml  requirements.txt
data/: clean_memory_samples.json  memory_db.json  poisoned_memory_samples.json
docs/: architecture.md  attack_scenarios.md  evaluation_plan.md  threat_model.md
memoryguard/: __init__.py  agent_simulator.py  classifier.py  cli.py  diff_tracker.py  evaluation.py  models.py  quarantine.py  report_generator.py  scanner.py  trust_score.py
policies/: memory_rules.yaml
quarantine/: diff_log.json  quarantine_store.json
reports/: before_after_report.md  evaluation_report.md  scan_report.md
tests/: test_agent_simulator.py  test_classifier.py  test_quarantine.py  test_scanner.py  test_trust_score.py
